--- a/php/tex/SSDD.tex
+++ b/php/tex/SSDD.tex
@@ -299,9 +299,10 @@ Section 6 and beyond are appendices including original
 information and communications used to create this document.
 
 \subsection{Document Restrictions}
-This document is for LIMITED RELEASE ONLY to University of Idaho CS personnel
-working on the project and Dr. Jeffery.
+his document is for LIMITED RELEASE ONLY to University of Idaho CS personnel
+working on the project and Dr. Clinton Jeffery.
 
+%This section originally written by the Gus team, with additions by Cindy and Alex.
 \section{Constraints and Stakeholder Concerns}
 	\subsection{Constraints}
 		\subsubsection{Environmental Constraints}
@@ -422,6 +423,9 @@ for each of the three levels of privelege.
 %I agree though text is prettier than numbers, so I will make the changes.  Is there a way to
 %get an extra line break between paragraphs?
 
+%Alex: The paragraphs look cleaner, to be sure.  I think having a subsection for each use case
+%would be alright.  I'm not sure if there's a way to just put a line break in. I tried using \linebreak
+%and \newline, but they apparently work as suggestions rather than orders.
 
 
 \subsubsection{User{\textquoteright}s View Representation and Description}
