--- a/php/tex/SSDD.tex
+++ b/php/tex/SSDD.tex
@@ -426,6 +426,8 @@ for each of the three levels of privelege.
 %Alex: The paragraphs look cleaner, to be sure.  I think having a subsection for each use case
 %would be alright.  I'm not sure if there's a way to just put a line break in. I tried using \linebreak
 %and \newline, but they apparently work as suggestions rather than orders.
+%On another note, someone has been keeping minutes and records of our meetings, right?  We could put those
+%into an appendix pretty easily and it'd probably help with further filling out of the SSDD.
 
 
 \subsubsection{User{\textquoteright}s View Representation and Description}
