changed the url for the gantt chart in hw2.tex, updated hw2.pdf, and added ganttchart.html

--- a/docs/hw2/hmk2.tex
+++ b/docs/hw2/hmk2.tex
@@ -21,7 +21,7 @@ Completed Goals for this week:
 \item establish consistent development environment for each team member
 \item develop plan for testing
 \end{itemize}
-\href{https://doc-0s-84-docs.googleusercontent.com/docs/secure/i334la2hu6jm7tnml3apbcanege08fqn/8ge6abfiol9jt70lr3mql4hl2lqe41l4/1296108000000/07145567960580470715/08963930125627892319/0BxVPr2RPStHxYmU5NWVjYWQtM2RiZC00ZmE5LThiMTktZDRiOGY4M2ViMDgx?authkey=CK_1264D&nonce=b6n07mlbqbp10&user=08963930125627892319&hash=ln71o85ussn0f7vm6sfoqi5eu5ej5jeb}{Gantt Chart}
+\href{ganttchart.html}{Gantt Chart}
 \\
 \\
 Subteams 
