Fixed a few notes

--- a/docs/3-4-11_Code_Inspection.tex
+++ b/docs/3-4-11_Code_Inspection.tex
@@ -43,10 +43,10 @@
   \item Mike: Why use `super' in `with\_user\_in\_group'?\newline 
            Joran: Not sure, all examples found were that way.
   \item Dr J: Do lists scale well in Django/Python?\newline
-           Joran: Pretty sure they will.
+           Mike: Yes, especially as these particular lists will never be unreasonably long.
   \item Possible Code Change on Lines 212-213.
   \item Mike: Why use setUsers, setGroup, setName?\newline
-           Joran: Django requires that you have both getters and setters, makes nicer way to access things.
+           Joran: Django requires that if you want both getters and setters you need both, makes nicer way to access things.
  \end{itemize}
 
  \textbf{\\[0.5pt] gus\_emailer/view.py}\newline
@@ -69,7 +69,7 @@
  Questions/thoughts that came up:
  \begin{itemize}
   \item Dr J: Calendars seem easy and generic, is there a Django one? Was ours made from scratch?\newline
-          Joran: Doesn't seem to be one and yes.
+          Sasha: Probably online, but that would not teach us anything, so I wrote it from scratch.
  \end{itemize}
 \end{document} 
 
